# TensorOperations

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  pyproject.toml
benchmarks/: bench_contraction.cpp  bench_team_contraction.cpp
benchmarks/matrix_multiply/: README.md  bench_matrix_multiply.cpp
benchmarks/multilevel_contraction/: README.md  bench_multilevel_contraction.cpp
benchmarks/permuted_contraction/: bench_permuted_contraction.cpp
benchmarks/team_contraction/: README.md  bench_team_contraction.cpp
include/TensorOperations/: Concept.hpp  DeviceTuple.hpp  Evaluator.hpp  Graph.hpp  Layout.hpp  Macros.hpp  NodeHandle.hpp  Permute.hpp  RegisterArray.hpp  TensorHandle.hpp  TileLayout.hpp  TiledLayout.hpp  Tiling.hpp  TimingAnalysis.hpp  TimingInstrumentation.hpp
include/TensorOperations/Evaluator/: Range.hpp  Team.hpp
tests/: test_combine_node.cpp  test_concept.cpp  test_contraction_eval.cpp  test_contraction_node.cpp  test_device_tuple.cpp  test_graph.cpp  test_layout.cpp  test_layout_staging.cpp  test_nodehandle.cpp  test_register_array.cpp  test_tile_layout_stride.cpp  test_tiled_layout.cpp  test_tiling.cpp
